# scrobbler-server

./: .dockerignore  .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.diesel-cli  docker-compose.yml  dockerfile.arm  multi-arch-docker-ci.sh  publish_images.sh  readme.md
api/: Cargo.toml
api/src/: DrinksController.rs  api.rs  lib.rs  main.rs
api/src/api/: drinks_controller.rs
api/src/controllers/: drink_dranks_controller.rs  drinks_controller.rs  health_controller.rs  scrobbles_controller.rs  trackables_controller.rs
api/src/dtos/: drink_drank_dto.rs  drink_dto.rs  health_dto.rs  scrobble_dto.rs  trackable_dto.rs
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  main.rs
core/: Cargo.toml
core/migrations/2020-10-29-211524_create_drinks/: down.sql  up.sql
core/migrations/2020-11-01-214213_create_drink_dranks/: down.sql  up.sql
core/migrations/2021-02-24-230850_Initial/: up.sql
core/src/: db.rs  drink.rs  drink_drank.rs  drink_dranks_repository.rs  drinks.rs  drinks_repository.rs  drinks_with_count.sql  lib.rs  models.rs  schema.rs  scrobbles_repository.rs  trackables_repository.rs
core/src/models/: drink.rs  drink_drank.rs  scrobble.rs  trackable.rs
main/: Cargo.toml
main/src/: main.rs
src/: api.rs  cli.rs  drink.rs  drinks.rs  main.rs
src/impls/: drink.rs  drinks.rs  mod.rs
