[package]
name = "main"
version = "0.1.0"
authors = ["Harvey"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
api = { path = "../api" }
cli = { path = "../cli" }
dialoguer = "0.4.0"
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
